# Chess_Engine

./: CMakeLists.txt  main.cpp
src/: ai_move_generator.cpp  ai_move_generator.hpp  board.cpp  board.hpp  cli_main.cpp  engine.cpp  engine.hpp  gui_main.cpp  lichess_bot.cpp  main.cpp  pieces.hpp  sdl_game.cpp  sdl_game.hpp
src/board/: board.cpp  board.hpp  check.cpp  check.hpp  initialization.cpp  initialization.hpp  move_generation.cpp
src/engine/: computer_player.cpp  computer_player.hpp  move_generator.cpp  move_generator.hpp  opening_book.cpp  piece_square_tables.hpp  position_evaluator.cpp  position_evaluator.hpp
src/gui/: sdl_game.cpp  sdl_game.hpp
src/pieces/: piece.hpp  symbols.hpp
